Fix several examples to be better on mobile, fix mobile example layout

--- a/docs/src/examples/reactivity/advanced-ball-simulation/component.css
+++ b/docs/src/examples/reactivity/advanced-ball-simulation/component.css
@@ -1,13 +1,14 @@
 .simulation {
   text-align: center;
+  user-select: none;
   canvas {
     border: var(--border);
     border-radius: var(--border-radius);
+    max-width: 100%;
   }
   p {
     font-size: var(--small);
     color: var(--standard-30);
-    user-select: none;
   }
   input {
    vertical-align: middle;
